[package]
name = "events-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "mysql"] }
tokio = { version = "1", features = ["full"] }
