[package]
name = "pet-scroll"
version = "0.1.0"
edition = "2021"
description = "A simple certificate manager for PETComp events."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
csv = "1.2.1"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
ssh2 = "0.9.4"
